--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,16 @@
         <div class="catalog-item catalog-item-special">
             <img src="img/catalog/eos700d1855isstm.png" alt="Canon" class="catalog-item-special__photo">
             <div class="catalog-item-special__desc">
-                <h4>Canon EOS 700D Kit 18-55 IS STM</h4> Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии. Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии.
-            </div>
-            <div class="catalog-item__cost--previous">
-                6 900 000 руб
+                <h4>Canon EOS 700D Kit 18-55 IS STM</h4>
+                 Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии. Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии.
             </div>
             <div class="catalog-item-special__cost">
-                6 900 000 руб <i class="fa fa-android"></i>
+                <div class="catalog-item__cost--previous">
+                    6 900 000 руб
+                </div>
+                <div class="catalog-item__cost--special">
+                    6 900 000 руб<i class="fa fa-android"></i>
+                </div>
             </div>
         </div>
         <div class="catalog-item">
