--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <input id="from" type="text" class="filter-form__price-input" value="500 000">
             <label for="to" class="filter-form__input-label">До</label>
             <input id="to" type="text" class="filter-form__price-input" value="2500">
-            <span class="filter-form__label">рублей </span>
+            <sp fan class="filter-form__label">рублей </span>
         </form>
     </div>
 </section>
@@ -39,10 +39,8 @@
                  Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии. Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии.
             </div>
             <div class="catalog-item-special__cost">
-                <div class="catalog-item__cost--previous">
-                    6 900 000 руб
-                </div>
-                <div class="catalog-item__cost--special">
+                    6 900 000 руб.
+                <div class="catalog-item-special__cost--red">
                     6 900 000 руб<i class="fa fa-android"></i>
                 </div>
             </div>
